[package]
name = "strategy-pnl-daily-rs"
version = "0.1.0"
edition = "2021"
description = "Fast ETL: trades.bin + OHLCV -> per-strategy daily PnL Parquet"
license = "MIT"

[dependencies]
arrow = "55"
parquet = "55"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
walkdir = "2.5"
csv = "1.3"
regex = "1.10"
hashbrown = "0.14"

[[bin]]
name = "pnl_daily"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
